// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given mode: "development", env: "undefined", argv: "{"liveReload":false,"hot":false}" should match snapshot 1`] = `
Object {
  "entry": "./src",
  "mode": "development",
}
`;

exports[`given mode: "development", env: "undefined", argv: "{"liveReload":true,"hot":true}" should match snapshot 1`] = `
Object {
  "entry": "./src",
  "mode": "development",
}
`;

exports[`given mode: "development", env: "undefined", argv: "{"mode":"development"}" should match snapshot 1`] = `
Object {
  "entry": "./src",
  "mode": "development",
}
`;

exports[`given mode: "production", env: "undefined", argv: "{"liveReload":true,"hot":true}" should match snapshot 1`] = `
Object {
  "entry": "./src",
  "mode": "production",
}
`;

exports[`given mode: "production", env: "undefined", argv: "{"mode":"production"}" should match snapshot 1`] = `
Object {
  "entry": "./src",
  "mode": "production",
}
`;
